--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,7 +39,7 @@
 <meta name="apple-mobile-web-app-title" content="{{ site.name }}">
 <link rel="apple-touch-icon-precomposed" href="{{ site.url }}/images/favicon-152.png">
 
-<link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lora|Playfair+Display+SC:900" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="https://yarnpkg.com/en/package/normalize.css" rel="stylesheet">
 <link href="{{ site.url }}/css/styles.css" rel="stylesheet">
