--- a/css/elements/banner.scss
+++ b/css/elements/banner.scss
@@ -1,10 +1,11 @@
+@import "../global.scss";
+
 .banner {
+	@include var("color", "normal-color-focus");
+
 	display: block;
 	margin: 0;
-	margin-top: .5em;
-	padding: .5em 1em;
-	color: #000;
-	color: var(--normal-color-focus);
+	padding: .5em 0;
 	text-decoration: none;
 }
 
@@ -14,24 +15,31 @@
 	justify-content: center;
 	font-size: calc(3vw + .6em);
 	font-weight: bold;
-	border-bottom: 3px solid #000000;
-	border-bottom: 3px solid var(--normal-color-focus);
+
+	@include var(
+		"border-bottom",
+		($box-border-size, solid, "normal-color-focus"),
+		$separator: space
+	);
 }
 
 .banner__icon {
+	@include var("filter", "attr-filter-color");
+
 	height: 2em;
 	width: auto;
-	filter: contrast(0) brightness(0);
-	filter: contrast(0) brightness(var(--image-brightness-focus));
 }
 
 .banner__name {
-    color: #000;
-    color: var(--normal-color-focus);
+	@include var("color", "normal-color-focus");
+
+	font-family: $font-heading;
+	font-size: 1.2em;
+	margin-bottom: .15em;
 }
 
 @media(min-width: 1000px) {
 	.banner {
-		padding: 1em;
+		padding: 1em 0;
 	}
 }
