--- a/css/elements/dialog.scss
+++ b/css/elements/dialog.scss
@@ -1,3 +1,5 @@
+@import "../global.scss";
+
 .dialog {
 	position: fixed;
 	z-index: 1;
@@ -27,8 +29,8 @@
 	width: 48px;
 	height: 48px;
 
-	background-color: #FFFFFF;
-	background-color: var(--normal-background);
+	@include var("background-color", "normal-background");
+
 	border-radius: 50%;
 	transition: background-color .25s, opacity .25s;
 }
@@ -42,20 +44,22 @@
 	top: 50%;
 	left: 50%;
 	transform: translateX(-50%) translateY(-50%);
-	color: #FFF;
-	color: var(--normal-color-focus);
+
+	@include var("color", "normal-color-focus");
 	
 	display: block;
 	transition: transform .25s, color .25s;
 }
 
 .dialog__close:hover > .material-icons {
+	@include var("color", "accent-color-text");
+
 	transform: translateX(-50%) translateY(-50%) rotate(90deg);
-	color: #205E37;
-	color: var(--accent-color-text);
 }
 
 .dialog__content {
+	@include var("background-color", "normal-background");
+
 	position: fixed;
 	bottom: 0;
 	left: 0;
@@ -63,7 +67,7 @@
 	border: none;
 	width: 100%;
 	height: 90%;
-	background-color: #FFF;
+
 	animation-name: dialog;
 	animation-duration: .25s;
 	animation-timing-function: ease-out;
