--- a/css/elements/footer.scss
+++ b/css/elements/footer.scss
@@ -1,19 +1,22 @@
+@import "../global.scss";
+
 .footer {
 	clear: both;
-	padding-left: 4vw;
-	padding-right: 4vw;
+	padding: 0 $box-x;
 	padding-top: 20px;
 	padding-bottom: 80px;
 	bottom: 0;
 	left: 0;
 	right: 0;
-
-	background: #FFFFFF;
-	background: var(--normal-background);
 }
 
-.footer[fixed] {
-	position: fixed;
-	border-top: 1px solid #BDBDBD;
-	border-top: 1px solid var(--normal-outline);
+.footer__main {
+	@include var(
+		"border-bottom",
+		($box-border-size, solid, "normal-color-text"),
+		$separator: space
+	);
+
+	padding-bottom: 1em;
+	margin-bottom: 2em;
 }
