--- a/css/elements/paginator.scss
+++ b/css/elements/paginator.scss
@@ -1,3 +1,5 @@
+@import "../global.scss";
+
 .paginator {
 	display: flex;
 	align-items: center;
@@ -30,13 +32,12 @@
 }
 
 .paginator__icon--disabled {
-	color: #BDBDBD;
-	color: var(--normal-outline);
+	@include var("color", "normal-outline");
+
 	pointer-events: none;
 	cursor: default;
 }
 
 .paginator__icon--disabled:hover {
-	color: #BDBDBD;
-	color: var(--normal-outline);
+	@include var("color", "normal-outline");
 }
