--- a/css/elements/snackbar.scss
+++ b/css/elements/snackbar.scss
@@ -1,3 +1,5 @@
+@import "../global.scss";
+
 .snackbar {
 	display: block;
 	width: 100%;
@@ -7,10 +9,9 @@
 	right: 0;
 	border: none;
 	outline: none;
-	background-color: rgba(0, 0, 0, 0.9);
-	background-color: var(--normal-overlay-inverse);
-	color: #FFFFFF;
-	color: var(--normal-background);
+
+	@include var("background-color", "normal-overlay-inverse");
+	@include var("color", "normal-background");
 
 	text-align: center;
 	vertical-align: middle;
